# fujicv

./: .gitignore  .secrets.baseline  CHANGELOG.md  FUJICV_SPEC.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: colab_cifar10.ipynb  colab_multilabel.ipynb  colab_regression.ipynb  evaluate.py  train.py  train_cifar10.py  train_convnext.py  train_efficientnet.py  train_hf_beans.py  train_mnist.py  train_vit.py
examples/configs/: classification_example.yaml  multilabel_example.yaml  regression_example.yaml
fujicv/: __init__.py
fujicv/data/: __init__.py  autoaugment.py  dataloader.py  datasets.py  hf_dataset.py  mixup.py  sampler.py  transforms.py
fujicv/engine/: __init__.py  callbacks.py  distillation_trainer.py  logger.py  trainer.py
fujicv/eval/: __init__.py  attention_map.py  calibration.py  confusion.py  curves.py  gradcam.py  plots.py  report.py  tsne.py
fujicv/export/: __init__.py  onnx.py
fujicv/hpo/: __init__.py  tuner.py
fujicv/inference/: __init__.py  ensemble.py  predictor.py  tta.py
fujicv/losses/: __init__.py  classification.py  distillation.py  multilabel.py  registry.py  regression.py
fujicv/metrics/: __init__.py  classification.py  multilabel.py  registry.py  regression.py
fujicv/models/: __init__.py  backbone.py  builder.py  custom_layers.py  head.py  stochastic_depth.py
fujicv/training/: __init__.py  ema.py  kfold.py  llrd.py  sam.py  schedulers.py
fujicv/utils/: __init__.py  config.py  registry.py  seed.py
tests/: test_autoaugment.py  test_bugfixes.py  test_calibration.py  test_confusion.py  test_data.py  test_distillation.py  test_ema.py  test_ema_trainer.py  test_ensemble.py  test_gradcam.py  test_hf_dataset.py  test_hpo.py  test_kfold.py  test_llrd.py  test_losses.py  test_metrics.py  test_mixup.py  test_models.py  test_sam.py  test_sampler.py  test_schedulers.py  test_stochastic_depth.py  test_tta.py
