[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fujicv"
version = "0.1.0"
description = "Open-source Python package for image classification and regression built on timm + torchvision"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "FujiCV Contributors" }]
keywords = ["deep-learning", "computer-vision", "image-classification", "timm", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "albumentations>=1.3",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "iterative-stratification>=0.1.7",
    "numpy>=1.24",
    "Pillow>=9.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15"]
onnx = ["onnxruntime>=1.15", "onnx>=1.14"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "detect-secrets>=1.4",
    "types-PyYAML",
    "types-seaborn",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
all = [
    "fujicv[wandb,onnx,dev]",
]

[project.urls]
Homepage = "https://github.com/fujicv/fujicv"
Repository = "https://github.com/fujicv/fujicv"
"Bug Tracker" = "https://github.com/fujicv/fujicv/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fujicv*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B007", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
